--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
     "name": "FreeKinopoisk",
-    "version": "1.0",
+    "version": "2.0",
     "description": "Смотри любые фильмы на кинопоиске бесплатно!",
     "icons": {
         "128": "128.png",
@@ -9,11 +9,14 @@
     },
     "content_scripts": [
         {
-            "matches": ["https://www.kinopoisk.ru/film/*"],
+            "matches": ["*://www.kinopoisk.ru/film/*", "*://www.kinopoisk.ru/series/*"],
             "js": ["content_script.js"]
         }
     ],
     "permissions": [
         "activeTab"
+    ],
+    "web_accessible_resources": [
+        "button.html"
     ]
 }
